cmd+c not working in Info - console #37065

Closed
opened 2013-10-13 17:01:09 +02:00 by Sebastian Röthlisberger · 9 comments

%%%--- Operating System, Graphics card ---
osx 10.8.4

- Blender version with error, and version that worked ---

error in all of them

- Short description of error ---

Area info - console does not allow copy by cmd+c.
(i mean this thing where blender prints some stuff, you can expand by drag info bar down)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

find Info space
expand the info console
hit cmd+c

%%%

%%%--- Operating System, Graphics card --- osx 10.8.4 - Blender version with error, and version that worked --- error in all of them - Short description of error --- Area info - console does not allow copy by cmd+c. (i mean this thing where blender prints some stuff, you can expand by drag info bar down) - Steps for others to reproduce the error (preferably based on attached .blend file) --- find Info space expand the info console hit cmd+c %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I didn't test it here, but it seems to be right in your alley Jens ;)%%%

%%%I didn't test it here, but it seems to be right in your alley Jens ;)%%%

%%%Use Cntl-C instead of Cmd-C%%%

%%%Use Cntl-C instead of Cmd-C%%%

%%%@ George: We already have changed this, or better say enabled cmd+ for Text Editor and 3D View and what not. Cmd+ is osx standard.%%%

%%%@ George: We already have changed this, or better say enabled cmd+ for Text Editor and 3D View and what not. Cmd+ is osx standard.%%%

%%%I agree, Cmd-C should work. I thought you might be a frustrated user looking for a quick workaround until it gets fixed. :)%%%

%%%I agree, Cmd-C should work. I thought you might be a frustrated user looking for a quick workaround until it gets fixed. :)%%%

This issue was referenced by blender/blender-addons-contrib@d846c9a3b7

This issue was referenced by blender/blender-addons-contrib@d846c9a3b75c3d6f20bc7ab7d2da6cdd18bbbef2

This issue was referenced by d846c9a3b7

This issue was referenced by d846c9a3b75c3d6f20bc7ab7d2da6cdd18bbbef2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit d846c9a3b7.

Closed by commit d846c9a3b7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37065
No description provided.