OSX: fix T37065 cmd+c not working in Info - console